# Ray-Tracing-IOW

./: .gitignore  CMakeLists.txt  Camera.h  Ray.h  camera.h  hit_record.h  hitable.h  hitable_list.cpp  hitable_list.h  main.cpp  ray.h  sphere.cpp  sphere.h
materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Metal.cpp  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
objects/: Hitable.h  hitable.h  hitable_list.cpp  hitable_list.h  sphere.cpp  sphere.h
sdl_window/: color.cpp  color.h  renderer.cpp  renderer.h
